<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.hidekatsu-izuno</groupId>
  <artifactId>pglite-jdbc</artifactId>
  <version>0.1.1</version>
  <name>PGlite JDBC</name>
  <description>JDBC driver for pglite with pgjdbc-compatible APIs.</description>
  <url>https://github.com/hidekatsu-izuno/pglite-jdbc</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>21</maven.compiler.release>
    <junit.version>6.1.0</junit.version>
    <pgjdbc.version>42.7.7</pgjdbc.version>
    <jackson.version>2.22.0</jackson.version>
    <endive.version>1.0.0</endive.version>
  </properties>

  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
    <license>
      <name>PostgreSQL License</name>
      <url>https://opensource.org/license/postgresql</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <id>hidekatsu.izuno</id>
      <name>Hidekatsu Izuno</name>
      <email>hidekatsu.izuno@gmail.com</email>
    </developer>
  </developers>

  <scm>
    <url>https://github.com/hidekatsu-izuno/pglite-jdbc</url>
    <connection>scm:git:git://github.com/hidekatsu-izuno/pglite-jdbc.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/hidekatsu-izuno/pglite-jdbc.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <dependencies>
    <dependency>
      <groupId>org.postgresql</groupId>
      <artifactId>postgresql</artifactId>
      <version>${pgjdbc.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>run.endive</groupId>
      <artifactId>runtime</artifactId>
      <version>${endive.version}</version>
    </dependency>
    <dependency>
      <groupId>run.endive</groupId>
      <artifactId>wasm</artifactId>
      <version>${endive.version}</version>
    </dependency>
    <dependency>
      <groupId>run.endive</groupId>
      <artifactId>wasi</artifactId>
      <version>${endive.version}</version>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.14.0</version>
        <configuration>
          <release>${maven.compiler.release}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>3.5.3</version>
        <configuration>
          <useSystemClassLoader>false</useSystemClassLoader>
          <systemPropertyVariables>
            <build.properties.relative.path>${project.basedir}/src/test/resources</build.properties.relative.path>
          </systemPropertyVariables>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.3.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>3.11.2</version>
        <configuration>
          <encoding>${project.build.sourceEncoding}</encoding>
          <docencoding>${project.build.sourceEncoding}</docencoding>
          <charset>${project.build.sourceEncoding}</charset>
          <locale>en_US</locale>
          <author>true</author>
          <notimestamp>true</notimestamp>
          <source>21</source>
          <detectJavaApiLink>true</detectJavaApiLink>
          <doclint>none</doclint>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.sonatype.central</groupId>
        <artifactId>central-publishing-maven-plugin</artifactId>
        <version>0.9.0</version>
        <extensions>true</extensions>
        <configuration>
          <publishingServerId>central-github</publishingServerId>
          <deploymentName>${project.artifactId}-${project.version}</deploymentName>
          <autoPublish>true</autoPublish>
          <waitUntil>published</waitUntil>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>3.2.7</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
            <configuration>
              <keyname>${gpg.keyname}</keyname>
            </configuration>
          </plugin>

        </plugins>
      </build>
    </profile>
  </profiles>
</project>
